--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   <body>
     <div class="frame">
       <div class="window"></div>
-      <div class="middle-section">
-        <button class="resetBtn">Reset</button>
-      </div>
+
       <div class="numpad">
         <div class="numbers">
-          <button id="num1">0</button>
-          <button id="num1">1</button>
-          <button id="num2">2</button>
-          <button id="num3">3</button>
-          <button id="num4">4</button>
-          <button id="num5">5</button>
-          <button id="num6">6</button>
-          <button id="num7">7</button>
-          <button id="num8">8</button>
-          <button id="num9">9</button>
+          <button id="num1">7</button>
+          <button id="num1">8</button>
+          <button id="num2">9</button>
+          <button id="num3">4</button>
+          <button id="num4">5</button>
+          <button id="num5">6</button>
+          <button id="num6">1</button>
+          <button id="num7">2</button>
+          <button id="num8">3</button>
+          <button id="num9">0</button>
+          <button id="decimal">,</button>
+          <button id="delBtn">Del</button>
         </div>
         <div class="functions">
           <button id="add">+</button>
