completed the calculator exercise :)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="frame">
       <div id="window">
         <div id="userInput"></div>
+        <div id="snapshot"></div>
       </div>
 
       <div class="numpad">
